--- a/cart.html
+++ b/cart.html
@@ -3,10 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Cart</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="search-container">
+            <div class="search-bar-container pad-top-1">
+                <div class="logo">
+                    <img src="./img/swoosh-2.png">
+                </div>
+                <input type="search" class="search" id="redirector" placeholder="Search...">
+                <div class="close-btn">Cancelar</div>
+            </div>
+            <div class="recs-search">
+                <p>Terminos de busqueda populares</p>
+                <div class="search-recents">
+                    <button class="recents-btn" type="button">jordan</button>
+                    <button class="recents-btn" type="button">dunk</button>
+                    <button class="recents-btn" type="button">air force</button>
+                    <button class="recents-btn" type="button">air max</button>
+                    <button class="recents-btn" type="button">blazer</button>
+                    <button class="recents-btn" type="button">dunk low</button>
+                </div>
+            </div>
+        </div>
+        <div class="header-container">
+            <div class="header-section header-gray">
+                <img src="./img/jordan.png">
+               <div class="nav-items fnt-12px">
+                <a href="#">Buscar tienda</a>
+                <a href="#">Ayuda</a>
+                <a href="#">Únete</a>
+                <a href="#">Iniciar sesión</a>
+               </div> 
+            </div>
+            <div class="ribbon">
+                <div class="logo">
+                    <a href="index.html"><img src="./img/swoosh-2.png"></a>
+                </div>
+                <div class="nav-items">
+                    <a href="#">Lo Nuevo</a>
+                    <a href="#">Hombre</a>
+                    <a href="#">Mujer</a>
+                    <a href="#">Niño/a</a>
+                    <a href="#">Ofertas</a>
+                    <a href="#">SNKRS</a>
+                </div>
+                <div class="icon-holder">
+                    <div id="mainbar" class="search-bar">
+                        <input class="sample-search" type="search" placeholder="Search...">
+                    </div>
+                    <div class="header-icon">
+                        <a href="#"><img src="./img/fav.png"></a>
+                    </div>
+                    <div class="header-icon">
+                        <a href="cart.html"><img src="./img/cart.png"></a>
+                    </div>
+                </div>
     
+            </div>
+        </div>
+    </header>
+    <div class="header">
+        <h1>Bolsa de Compra</h1>
+    </div>
+    <div class="container">
+        <div id="cart-container">
+            <!-- Cart items will be dynamically added here -->
+        </div>
+        <div class="information">
+            <div class="resume">
+                <p class="heading-cart">Resumen de Compra</p>
+                <div class="total-price">
+                    <p>Subtotal: $<span id="total-price"></span></p>
+                </div>
+                <div class="shipping-info">
+                    <p>Gastos de envío y gestion estimados</p>
+                </div>  
+            </div>
+            <input type="button" class="btn" id="checkout" value="Pagar">
+
+        </div>
+    </div>
+    <script src="cart.js"></script>
 </body>
 </html>
